Fix PR issues